--- a/mynewbook/_config.yml
+++ b/mynewbook/_config.yml
@@ -19,11 +19,16 @@ latex:
 bibtex_bibfiles:
   - references.bib
 
+# How to launch interactiver versions of the jupyter notebooks
+launch_buttons:
+  notebook_interface: "jupyterlab"
+  binderhub_url: "https://mybinder.org"
+
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/cianwilson/jupyter-book-test  # Online location of your book
+  path_to_book: mynewbook  # Optional path to your book, relative to the repository root
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
